--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,7 @@ jobs:
               event.project_card.project_url: ${{github.event.project_card.project_url}} 
               event.project_card.content_id:  ${{github.event.project_card.content_id}} 
               event.project_card.note:  ${{github.event.project_card.note}} 
+              event.project_card.node_id:  ${{github.event.project_card.node_id}} 
               github.event_path: ${{github.event_path}} 
 #           reaction-type: '+1'
       - name: Create Comment - project FUNCTIONAL TEST - card FAILED
