--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -1,27 +1,31 @@
-'TRIAGE - Feature Request':
-  'NEEDS TRIAGE':
+TRIAGE - Feature Request:
+  'UP NEXT':
+    - 'need specification'
+  'IN FUTURE':
     - '0 - Backlog'
   'IN DISCUSSION':
     - 'Discussion'
-    - '0 - Backlog'
-  'IN FUTURE':
-    - '0 - Backlog'
-  'UP NEXT':
-    - '1 - Planning'
 
-'DEVELOPMENT CYCLE':
+Feature Specification:
+  'PENDING FEATURE REQUEST':
+    - '1 - Planning'
+    - 'need specification'
+  'FEATURE READY':
+    - '2 - Ready'
+    
+DEVELOPMENT CYCLE:
   'TO-DO':
     - '2 - Ready'
   'CODING':
     - '3 - Working'   
   'CODED':
     - '3 - Working' #after functionaly test 
-#    - 'need tester'
+    - 'need tester'
   'PULL REQUEST':
     - '4 - In Review'
 #    'MERGED':
 
-'FUNCTIONALITY TEST':
+FUNCTIONALITY TEST:
   'TO-DO':
     - 'need tester'
     - '3 - Working'
@@ -29,7 +33,7 @@
     - '4 - In Review'
   'FAILED':
     - '3 - Working'   
-#     - 'test-FTfailed' #fix actions to label add by bot also trigger others actions
+    - ':red_circle:failed' #fix actions to label add by bot also trigger others actions
   'SUCCESSFUL':
     - '4 - In Review'
-#      - 'test-FTpass'
+    - ':large_blue_circle:passed'
