--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,20 +110,20 @@ jobs:
         if: |
           github.event_name == 'issues' && 
           github.event.action == 'labeled' &&  
-          contains(github.event.issue.labels.*.name, 'Feature Request')
+          contains(github.event.issue.labels.*.name, ':bulb:Feature Request')
         with:
-          project: 'https://github.com/ecureuill/SELIProject/projects/3'
+          project: 'https://github.com/ecureuill/SELIProject/projects/6'
           column_name: 'NEEDS TRIAGE'
       - name: Assign 'BUG', 'ISSUE',' BUG ON NEXT RELEASE' label to 'TRIAGE - Bugs'
         uses: srggrs/assign-one-project-github-action@1.2.0
         if: |
           github.event_name == 'issues' && 
           github.event.action == 'labeled' &&  (
-          contains(github.event.issue.labels.*.name, 'bug') ||
-          contains(github.event.issue.labels.*.name, 'bug on next release') ||
-          contains(github.event.issue.labels.*.name, 'issues'))
+          contains(github.event.issue.labels.*.name, ':bug:bug') ||
+          contains(github.event.issue.labels.*.name, ':beetle:bug-next') ||
+          contains(github.event.issue.labels.*.name, ':ant:issue'))
         with:
-          project: 'https://github.com/ecureuill/SELIProject/projects/1'
+          project: 'https://github.com/ecureuill/SELIProject/projects/7'
           column_name: 'NEEDS TRIAGE'
         
       - name: Assign '1 - PLANNING' label to 'FEATURE SPECIFICATION'
@@ -134,7 +134,7 @@ jobs:
           contains(github.event.issue.labels.*.name, '1 - Planning') ||
           contains(github.event.issue.labels.*.name, 'need specification'))
         with:
-          project: 'https://github.com/ecureuill/SELIProject/projects/4'
+          project: 'https://github.com/ecureuill/SELIProject/projects/8'
           column_name: 'PENDING FEATURE REQUEST'
 
       - name: Assign '2 - READY' label to 'DEVELOPMENT CYCLE'
@@ -144,7 +144,7 @@ jobs:
           github.event.action == 'labeled' &&  
           contains(github.event.issue.labels.*.name, '2 - Ready')
         with:
-          project: 'https://github.com/ecureuill/SELIProject/projects/2'
+          project: 'https://github.com/ecureuill/SELIProject/projects/9'
           column_name: 'TO-DO'
 
       - name: Assign 'need tester' label to 'FUNCTIONALITY TEST CYCLE'
@@ -154,7 +154,7 @@ jobs:
           github.event.action == 'labeled' &&  
           contains(github.event.issue.labels.*.name, 'need tester')
         with:
-          project: 'https://github.com/ecureuill/SELIProject/projects/6'
+          project: 'https://github.com/ecureuill/SELIProject/projects/10'
           column_name: 'TO-DO'
 
       - name: Assign 'Pull Request' to 'PULL REQUEST CYCLE'
@@ -163,5 +163,5 @@ jobs:
           github.event_name == 'pull_request' &&
           github.event.action == 'opened'
         with:
-          project: 'https://github.com/ecureuill/SELIProject/projects/7'
-          column_name: 'In progress'
+          project: 'https://github.com/ecureuill/SELIProject/projects/11'
+          column_name: 'Review in progress'
