--- a/.github/label-commenter-config.yml
+++ b/.github/label-commenter-config.yml
@@ -41,7 +41,7 @@ labels:
     #issue:
     #body: Thank you for following the template. The repository owner will reply.
     #action: open
-  - name: resolution-Won't fix
+  - name: resolution-WontFix
     labeled:
       issue:
         body: This will not be worked on but we appreciate your contribution.
