--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -19,7 +19,9 @@
     "@mcabreradev/filter": "^1.3.5",
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
-    "bcrypt": "^3.0.7",
+    "@progress/kendo-drawing": "^1.6.0",
+    "@progress/kendo-react-pdf": "^3.12.0",
+    "bcrypt": "^3.0.8",
     "bind-decorator": "^1.0.11",
     "bootstrap": "^4.4.1",
     "color-thief": "^2.2.5",
@@ -41,6 +43,8 @@
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "mongodb-restore": "^1.6.2",
+    "mup": "^1.4.6",
     "node-ffprobe": "github:ListenerApproved/node-ffprobe",
     "object-str-find": "^0.1.1",
     "rc-input-number": "^4.5.3",
