--- a/.github/label-commenter-config.yml
+++ b/.github/label-commenter-config.yml
@@ -8,7 +8,7 @@ labels:
     labeled:
       issue:
         body: This Feature Request was accepted and is ready for specfication.
-        action: close
+        action: open
   - name: 2 - Ready
     labeled:
       issue:
