--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,14 @@ jobs:
 #           body: |
 #             :large_blue_circle: @${{ github.event.issue.assignee.login }} your solution passed Functional Test
 # #           reaction-type: '+1'
-
+      - name: Move "Passed" to   "PASSED FUNCTIONAL TEST" column
+        uses: konradpabjan/move-labeled-or-milestoned-issue@v2.0
+        with:
+          action-token: "${{ secrets.MY_PERSONAL_ACTION_TOKEN }}"
+          project-url: "https://github.com/solex2006/SELIProject/projects/9"
+          column-name: "PASSED FUNCTIONAL TEST"
+          label-name: "passed :large_blue_circle:"
+#         columns-to-ignore: "In Review,Ready to deploy,Done"
 
       - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
         uses: srggrs/assign-one-project-github-action@1.2.0
