--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,86 +29,28 @@ jobs:
       
       - uses: technote-space/auto-card-labeler@v1 
         #GitHub actions that automatically labels Issues or PullRequests based on project card moves
-        if: github.event_name == 'project_card' 
+        if: github.event_name == 'project_card' && github.event.action == 'moved' 
         with:
           GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
             # Config file name.
             #CONFIG_FILENAME: # default is card-labeler.yml
 
-# #     #mail: 
-# #       - uses: timheuer/issue-notifier@v1
-# #       #GitHub actions that automatically send e-mail when a issue is labeled 
-# #         env:
-# #           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-# #         with:
-# #           fromMailAddress: 'q4j4v5e8z5w0j0m0@seli-wp4.slack.com'
-# #           toMailAddress: 'q4j4v5e8z5w0j0m0@seli-wp4.slack.com'
-# #           subject: 'New feature ready to specification'
-# #           subjectPrefix: ''
-# #           labelsToMonitor: "1 - Planning"
-# #           verbose: true
- 
-
-
-#     needs: [triage, assign_one_project]
       - name: commenter by label
+       #Label triggered GitHub Actions for posting a template message, automatically close or reopen issues or pull requests
         uses: peaceiris/actions-label-commenter@v1.3.2 
-#      #Label triggered GitHub Actions for posting a template message, automatically close or reopen issues or pull requests
-        if: github.event.action == 'labeled' || github.event.action == 'unlabeled' 
+        if: |
+          (github.event_name == 'issues' || github.event_name == 'project_card') && 
+          (github.event.action == 'labeled' || github.event.action == 'unlabeled')
         with:
            github_token: ${{ secrets.GITHUB_TOKEN }}
            config_file: .github/label-commenter-config.yml
 
-# #comment
-#       - name: verbose
-#         uses: peter-evans/create-or-update-comment@v1
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           issue-number: 60
-#           body: |
-#               *Verbose*
-#               event_name: ${{github.event_name }} 
-#               event.action: ${{github.event.action}} 
-#               event.project_card.id: ${{github.event.project_card.id}} 
-#               event.project_card.column_id: ${{github.event.project_card.column_id}} 
-#               event.repository.issues_url: ${{github.event.repository.issues_url}} 
-#               event.project_card.issues_url: ${{github.event.project_card.issues_url}} 
-#               event.project_card.project_url: ${{github.event.project_card.project_url}} 
-#               event.project_card.content_id:  ${{github.event.project_card.content_id}} 
-#               event.project_card.note:  ${{github.event.project_card.note}} 
-#               event.project_card.node_id:  ${{github.event.project_card.node_id}} 
-#               github.event_path: ${{github.event_path}} 
-# #           reaction-type: '+1'
-#       - name: Create Comment - project FUNCTIONAL TEST - card FAILED
-#         uses: peter-evans/create-or-update-comment@v1
-#         if: |
-#           github.event_name == 'project_card' && 
-#           github.event.project_card.project_url == 'https://github.com/ecureuill/SELIProject/projects/6' &&
-#           github.event.project_card.column_id == 8389382
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           issue-number: 60
-#           body: |
-#             :o: @${{ github.event.issue.assignee.login }} your solution didn't pass Functional Test
-# #          reaction-type: '+1'
-
-#       - name: Create Comment - project FUNCTIONAL TEST - card SUCCESS
-#         uses: peter-evans/create-or-update-comment@v1
-#         if: |
-#           github.event_name == 'project_card' && 
-#           github.event.project_card.project_url == 'https://github.com/ecureuill/SELIProject/projects/6' &&
-#           github.event.project_card.column_id == 8389386
-#         with:
-#           token: ${{ secrets.GITHUB_TOKEN }}
-#           issue-number: 60
-#           body: |
-#             :large_blue_circle: @${{ github.event.issue.assignee.login }} your solution passed Functional Test
-# #           reaction-type: '+1'
       - name: Move "Passed" to   "PASSED FUNCTIONAL TEST" column
         uses: konradpabjan/move-labeled-or-milestoned-issue@v2.0
         if: |
           github.event_name == 'issues' && 
-          github.event.action == 'labeled'
+          github.event.action == 'labeled' &&  
+          contains(github.event.issue.labels.*.name, 'passed :large_blue_circle:')
         with:
           action-token: "${{ secrets.MY_PERSONAL_ACTION_TOKEN }}"
           project-url: "https://github.com/solex2006/SELIProject/projects/9"
@@ -120,7 +62,8 @@ jobs:
         uses: konradpabjan/move-labeled-or-milestoned-issue@v2.0
         if: |
           github.event_name == 'issues' && 
-          github.event.action == 'labeled'
+          github.event.action == 'labeled' &&  
+          contains(github.event.issue.labels.*.name, 'failed :red_circle:')
         with:
           action-token: "${{ secrets.MY_PERSONAL_ACTION_TOKEN }}"
           project-url: "https://github.com/solex2006/SELIProject/projects/9"
