--- a/.github/card-labeler.yml
+++ b/.github/card-labeler.yml
@@ -20,6 +20,8 @@ Feature Specification:
 DEVELOPMENT CYCLE:
   'TO-DO':
     - '2 - Ready'
+  'DESIGN NOTES':
+    - '2 - Ready'    
   'CODING':
     - '3 - Working'   
   'CODED':
