--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -14,7 +14,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@ffprobe-installer/ffprobe": "^1.0.12",
     "@material-ui/core": "^4.9.11",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.36",
     "@mcabreradev/filter": "^1.3.5",
     "@monaco-editor/react": "^1.2.3",
@@ -23,6 +23,7 @@
     "bind-decorator": "^1.0.11",
     "bootstrap": "^4.4.1",
     "color-thief": "^2.2.5",
+    "core-js": "^3.6.5",
     "date-fns": "^2.12.0",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
@@ -30,12 +31,12 @@
     "email-deep-validator": "^3.3.0",
     "ffprobe": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
-    "material-ui": "^0.20.2",
+    "jss": "^9.8.7",
+    "material-ui": "^1.0.0-beta.46",
     "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
-    "material-ui-number-input": "^5.0.24",
-    "material-ui-pickers": "^2.2.4",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
@@ -43,7 +44,7 @@
     "object-str-find": "^0.1.1",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
-    "react": "^16.12.0",
+    "react": "^16.11.0",
     "react-alice-carousel": "^1.17.1",
     "react-burger-menu": "^2.6.13",
     "react-component-countdown-timer": "^0.1.1",
@@ -64,7 +65,7 @@
     "react-image-pan-zoom-rotate": "^1.3.0",
     "react-images": "^0.5.19",
     "react-images-viewer": "^1.6.2",
-    "react-live-clock": "^3.1.0",
+    "react-live-clock": "^4.0.5",
     "react-md": "^1.14.0",
     "react-mic": "^12.4.1",
     "react-native": "^0.62.2",
