--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -42,6 +42,7 @@
     "moment-duration-format": "^2.3.2",
     "node-ffprobe": "github:ListenerApproved/node-ffprobe",
     "object-str-find": "^0.1.1",
+    "openbadges-bakery-v2": "^2.1.0",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
     "react": "^16.11.0",
