encriptacion de usuario

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -20,6 +20,7 @@
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
     "bcrypt": "^3.0.8",
+    "bcrypt-nodejs": "0.0.3",
     "bind-decorator": "^1.0.11",
     "bootstrap": "^4.4.1",
     "color-thief": "^2.2.5",
@@ -42,6 +43,7 @@
     "moment-duration-format": "^2.3.2",
     "node-ffprobe": "github:ListenerApproved/node-ffprobe",
     "object-str-find": "^0.1.1",
+    "querystring": "^0.2.0",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
     "react": "^16.11.0",
@@ -95,6 +97,7 @@
     "sanitize-html": "^1.20.1",
     "save": "^2.4.0",
     "semantic-ui-react": "^0.88.2",
+    "simple-encryptor": "^3.0.0",
     "sort-json-array": "^0.1.7",
     "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
