--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -70,6 +70,7 @@
     "react-image-pan-zoom-rotate": "^1.3.0",
     "react-images": "^0.5.19",
     "react-images-viewer": "^1.6.2",
+    "react-input-mask": "^2.0.4",
     "react-live-clock": "^4.0.5",
     "react-md": "^1.14.0",
     "react-mic": "^12.4.1",
