--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "jss": "^9.8.7",
+    "material-table": "^1.59.0",
     "material-ui": "^1.0.0-beta.46",
     "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
