--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -26,6 +26,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bind-decorator": "^1.0.11",
     "bootstrap": "^4.4.1",
+    "clsx": "^1.1.1",
     "color-thief": "^2.2.5",
     "core-js": "^3.6.5",
     "date-fns": "^2.12.0",
