--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -60,6 +60,7 @@
     "react-full-screen": "^0.2.4",
     "react-h5-audio-player": "^2.0.0-beta.2",
     "react-h5-video": "^1.0.4",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.8.0",
     "react-id-swiper": "^2.4.0",
     "react-iframe": "^1.8.0",
