--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -63,6 +63,7 @@
     "react-flow-chart-updated": "^1.2.0",
     "react-froala-wysiwyg": "^3.0.6",
     "react-full-screen": "^0.2.4",
+    "react-gauge-chart": "^0.2.5",
     "react-h5-audio-player": "^2.0.0-beta.2",
     "react-h5-video": "^1.0.4",
     "react-icons": "^3.8.0",
