report of sylabus

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -36,6 +36,10 @@
     "email-deep-validator": "^3.3.0",
     "ffprobe": "^1.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "ipfs": "^0.48.1",
+    "ipfs-api": "^26.1.2",
+    "ipfs-http-client": "^45.0.0",
+    "ipfs-mini": "^1.1.5",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "jss": "^9.8.7",
