Fixing package dependencies

--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -38,7 +38,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "ipfs": "^0.48.1",
     "ipfs-api": "^26.1.2",
-    "ipfs-http-client": "^45.0.0",
+    "ipfs-http-client": "^44.3.0",
     "ipfs-mini": "^1.1.5",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
@@ -52,6 +52,7 @@
     "moment-duration-format": "^2.3.2",
     "node-ffprobe": "github:ListenerApproved/node-ffprobe",
     "object-str-find": "^0.1.1",
+    "prom-client": "^10.2.3",
     "querystring": "^0.2.0",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
