--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.36",
     "@mcabreradev/filter": "^1.3.5",
@@ -85,6 +85,7 @@
     "react-native": "^0.62.2",
     "react-native-elements": "^1.2.7",
     "react-native-vector-icons": "^6.6.0",
+    "react-number-format": "^4.4.1",
     "react-numeric-input": "^2.2.3",
     "react-player": "^1.15.2",
     "react-quill": "^1.3.3",
