--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -97,6 +97,7 @@
     "react-time-picker": "^4.0.1",
     "react-timer-machine": "^1.0.2",
     "react-unity-webgl": "^7.1.9",
+    "react-video-thumbnail": "^0.1.3",
     "react-viewer": "^3.1.0",
     "react-window-size": "^1.2.2",
     "sanitize-html": "^1.20.1",
