--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -27,6 +27,7 @@
     "clsx": "^1.1.1",
     "color-thief": "^2.2.5",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "date-fns": "^2.12.0",
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
@@ -109,6 +110,7 @@
     "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
     "unrar.js": "^0.2.5",
+    "uuid": "^8.3.0",
     "var_dump-js": "0.0.1",
     "wavesurfer.js": "^3.3.1"
   },
