--- a/Blockchain/package.json
+++ b/Blockchain/package.json
@@ -4,10 +4,10 @@
   "description": "Marriage Vows on the Blockchain",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=production node serverHTTPS.js -p 443",
     "test": "mocha",
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js -p $PORT",
     "heroku-postbuild": "next build"
   },
   "repository": {
@@ -28,11 +28,16 @@
     "@progress/kendo-react-pdf": "^3.4.1",
     "@zeit/next-css": "^0.2.0",
     "axios": "^0.19.0",
+    "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.3",
+    "express-hello-world": "^1.0.0",
+    "express-ip-filter": "^2.0.0",
+    "express-ipfilter": "^1.1.2",
     "fs": "0.0.1-security",
     "fs-extra": "^6.0.1",
     "ganache-cli": "^6.1.0",
     "jspdf": "^1.5.3",
+    "jwt-simple": "^0.5.6",
     "mocha": "^5.2.0",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.7",
@@ -48,12 +53,14 @@
     "react-to-pdf": "0.0.8",
     "semantic-ui-calendar-react": "^0.4.6",
     "semantic-ui-react": "^0.81.1",
+    "simple-encryptor": "^3.0.0",
     "solc": "^0.4.24",
     "truffle-hdwallet-provider": "0.0.5",
     "web3": "^1.2.1",
     "write-json-file": "^4.2.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "nodemon": "^2.0.3"
   }
 }
