--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -32,6 +32,7 @@
     "debug": "^4.1.1",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.4.1",
+    "draftail": "^1.3.0",
     "email-deep-validator": "^3.3.0",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
