--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,14 @@ jobs:
       # Create or update an issue based on specific file
       - name: Create Issue From File
         uses: peter-evans/create-issue-from-file@v2.3.1
-        if: github.event_name == 'project_card' && github.event.action == 'moved' 
+        #if: github.event_name == 'project_card' && github.event.action == 'moved' 
         with:
           # The GitHub authentication token
           token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
           # The issue number of an existing issue to update
           issue-number: 215
           # The title of the issue.
-          title: "Translation tracker"
+          title: "Translation Tracker"
           # The file path to the issue content.
           content-filepath: "./SELI-Platform/lib/translation/english.js"
           # A comma separated list of labels.
