--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,14 @@ on:
     types: [opened, labeled, unlabeled]
   project_card:
     types: [moved]
+  push:
+    branches: [develop]
+    paths-ignore:
+      - 'README.md'
+      - 'Blockchain/**'
+      - 'wireframes/**'
+      - 'Learning Analytics/**'
+      - 'docs/**'
 env:
   GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
 
@@ -26,10 +34,32 @@ jobs:
           # a Personal Access Token instead of secrets.GITHUB_TOKEN
           # so that tag pushes trigger repo push events.
           token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
-      
+
+      # Create or update an issue based on specific file
+      - name: Create Issue From File
+        uses: peter-evans/create-issue-from-file@v2.3.1
+        #if: github.event_name == 'project_card' && github.event.action == 'moved' 
+        with:
+          # The GitHub authentication token
+          token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
+          # The issue number of an existing issue to update
+          issue-number: 215
+          # The title of the issue.
+          title: "Translation Tracker"
+          # The file path to the issue content.
+          content-filepath: "./SELI-Platform/lib/translation/english.js"
+          # A comma separated list of labels.
+          labels: "automated :robot:, type:l10n"
+          # A comma separated list of assignees (GitHub usernames).
+          assignees: "ozguryasar, armagan9706, caroltaus"
+          # The name of the project for which a card should be created.
+          #project: # optional
+          # The name of the project column under which a card should be created.
+          #project-column: # optional
+
       - uses: technote-space/auto-card-labeler@v1 
         #GitHub actions that automatically labels Issues or PullRequests based on project card moves
-        if: github.event_name == 'project_card' && github.event.action == 'moved' 
+        if: github.event_name == 'push'
         with:
           GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
             # Config file name.
@@ -45,32 +75,6 @@ jobs:
            github_token: ${{ secrets.GITHUB_TOKEN }}
            config_file: .github/label-commenter-config.yml
 
-      - name: Move "Passed" to   "PASSED FUNCTIONAL TEST" column
-        uses: konradpabjan/move-labeled-or-milestoned-issue@v2.0
-        if: |
-          github.event_name == 'issues' && 
-          github.event.action == 'labeled' &&  
-          contains(github.event.issue.labels.*.name, 'passed :large_blue_circle:')
-        with:
-          action-token: "${{ secrets.MY_PERSONAL_ACTION_TOKEN }}"
-          project-url: "https://github.com/solex2006/SELIProject/projects/9"
-          column-name: "PASSED FUNCTIONAL TEST"
-          label-name: "passed :large_blue_circle:"
-#         columns-to-ignore: "In Review,Ready to deploy,Done"
-
-      - name: Move "Failed" to "FAILED" column
-        uses: konradpabjan/move-labeled-or-milestoned-issue@v2.0
-        if: |
-          github.event_name == 'issues' && 
-          github.event.action == 'labeled' &&  
-          contains(github.event.issue.labels.*.name, 'failed :red_circle:')
-        with:
-          action-token: "${{ secrets.MY_PERSONAL_ACTION_TOKEN }}"
-          project-url: "https://github.com/solex2006/SELIProject/projects/9"
-          column-name: "FAILED"
-          label-name: "failed :red_circle:"
-#         columns-to-ignore: "In Review,Ready to deploy,Done"
-
       - name: Assign 'FEATURE REQUEST' to 'TRIAGE - FEATURE REQUEST'
         uses: srggrs/assign-one-project-github-action@1.2.0
         if: |
@@ -80,6 +84,7 @@ jobs:
         with:
           project: 'https://github.com/solex2006/SELIProject/projects/6'
           column_name: 'NEEDS TRIAGE'
+          
       - name: Assign 'bug' label to 'TRIAGE - Bugs'
         uses: srggrs/assign-one-project-github-action@1.2.0
         if: |
@@ -112,18 +117,6 @@ jobs:
         with:
           project: 'https://github.com/solex2006/SELIProject/projects/9'
           column_name: 'TO-DO'
-
-
-      - name: Assign '2 - READY' label to 'DEVELOPMENT CYCLE - DESIGN NOTES'
-        uses: srggrs/assign-one-project-github-action@1.2.0
-        if: |
-          github.event_name == 'issues' && 
-          github.event.action == 'labeled' &&  
-          contains(github.event.issue.labels.*.name, '2 - Ready') &&
-          contains(github.event.issue.labels.*.name, 'Feature Design Notes :notebook:')
-        with:
-          project: 'https://github.com/solex2006/SELIProject/projects/9'
-          column_name: 'DESIGN NOTES'
       
       - name: Assign 'need tester' label to 'FUNCTIONALITY TEST CYCLE'
         uses: srggrs/assign-one-project-github-action@1.2.0
@@ -133,13 +126,4 @@ jobs:
           contains(github.event.issue.labels.*.name, 'need tester')
         with:
           project: 'https://github.com/solex2006/SELIProject/projects/10'
-          column_name: 'TO-DO'
-
-      - name: Assign 'Pull Request' to 'PULL REQUEST CYCLE'
-        uses: srggrs/assign-one-project-github-action@1.2.0
-        if: |
-          github.event_name == 'pull_request' &&
-          github.event.action == 'opened'
-        with:
-          project: 'https://github.com/solex2006/SELIProject/projects/11'
           column_name: 'TO-DO'
