--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
   project_card:
     types: [moved]
   push:
-    branches: [br_testing_bot]
+    branches: [develop]
     paths-ignore:
       - 'README.md'
       - 'Blockchain/**'
@@ -38,20 +38,20 @@ jobs:
       # Create or update an issue based on specific file
       - name: Create Issue From File
         uses: peter-evans/create-issue-from-file@v2.3.1
-        if: github.event_name == 'project_card' && github.event.action == 'moved' 
+        #if: github.event_name == 'project_card' && github.event.action == 'moved' 
         with:
           # The GitHub authentication token
           token: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
           # The issue number of an existing issue to update
           issue-number: 215
           # The title of the issue.
-          title: "Translation tracker"
+          title: "Translation Tracker"
           # The file path to the issue content.
           content-filepath: "./SELI-Platform/lib/translation/english.js"
           # A comma separated list of labels.
-          labels: "automated :robot:"
+          labels: "automated :robot:, type:l10n"
           # A comma separated list of assignees (GitHub usernames).
-          assignees: "ecureuill"
+          assignees: "ozguryasar, armagan9706, caroltaus"
           # The name of the project for which a card should be created.
           #project: # optional
           # The name of the project column under which a card should be created.
