--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -63,7 +63,7 @@
     "react-froala-wysiwyg": "^3.0.6",
     "react-full-screen": "^0.2.4",
     "react-gauge-chart": "^0.2.5",
-    "react-h5-audio-player": "^2.0.0-beta.2",
+    "react-h5-audio-player": "^3.4.1",
     "react-h5-video": "^1.0.4",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.8.0",
@@ -113,7 +113,7 @@
     "unrar.js": "^0.2.5",
     "uuid": "^8.3.0",
     "var_dump-js": "0.0.1",
-    "wavesurfer.js": "^3.3.3"
+    "wavesurfer.js": "^4.0.1"
   },
   "meteor": {
     "mainModule": {
