--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -20,10 +20,14 @@
     "@mcabreradev/filter": "^1.3.5",
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
+    "@shagital/db-dumper": "^1.0.2",
+    "ale-mongoutils": "^1.0.3",
     "bcrypt": "^3.0.8",
     "bcrypt-nodejs": "0.0.3",
     "bind-decorator": "^1.0.11",
     "bootstrap": "^4.4.1",
+    "bson-ext": "^2.0.5",
+    "bufferutil": "^4.0.1",
     "clsx": "^1.1.1",
     "color-thief": "^2.2.5",
     "core-js": "^3.6.5",
@@ -34,6 +38,7 @@
     "draft-js-export-html": "^1.4.1",
     "draftail": "^1.3.0",
     "email-deep-validator": "^3.3.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "jss": "^9.8.7",
@@ -41,9 +46,15 @@
     "material-ui": "^1.0.0-beta.46",
     "material-ui-audio-player": "^1.0.6",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mbr": "^1.1.3",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "mongobr": "^1.0.0",
+    "mongodb-backup": "^1.6.9",
+    "mongodb-io": "^0.2.5",
+    "mongodb-restore": "^1.6.2",
+    "multer": "^1.4.2",
     "object-str-find": "^0.1.1",
     "openbadges-bakery-v2": "^2.1.0",
     "prom-client": "^10.2.3",
@@ -111,6 +122,7 @@
     "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
     "unrar.js": "^0.2.5",
+    "utf-8-validate": "^5.0.2",
     "uuid": "^8.3.0",
     "var_dump-js": "0.0.1",
     "wavesurfer.js": "^4.0.1"
