--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -21,11 +21,14 @@
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
     "@shagital/db-dumper": "^1.0.2",
+    "adm-zip": "^0.4.16",
     "ale-mongoutils": "^1.0.3",
     "bcrypt": "^3.0.8",
     "bcrypt-nodejs": "0.0.3",
     "bind-decorator": "^1.0.11",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "bson": "^4.1.0",
     "bson-ext": "^2.0.5",
     "bufferutil": "^4.0.1",
     "clsx": "^1.1.1",
@@ -54,10 +57,13 @@
     "mongodb-backup": "^1.6.9",
     "mongodb-io": "^0.2.5",
     "mongodb-restore": "^1.6.2",
+    "move-file": "^2.0.0",
     "multer": "^1.4.2",
+    "mv": "^2.1.1",
     "object-str-find": "^0.1.1",
     "openbadges-bakery-v2": "^2.1.0",
     "prom-client": "^10.2.3",
+    "query-json": "^2.0.1",
     "querystring": "^0.2.0",
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
@@ -118,6 +124,7 @@
     "save": "^2.4.0",
     "semantic-ui-react": "^0.88.2",
     "simple-encryptor": "^3.0.0",
+    "simple-object-query": "^1.6.1",
     "sort-json-array": "^0.1.7",
     "swiper": "^5.2.1",
     "unrar-js": "^0.2.3",
