--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.36",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@mcabreradev/filter": "^1.3.5",
     "@monaco-editor/react": "^1.2.3",
     "@mrblenny/react-flow-chart": "0.0.7",
@@ -68,6 +68,7 @@
     "rc-input-number": "^4.5.3",
     "re-resizable": "^5.0.1",
     "react": "^16.11.0",
+    "react-activity-feed": "^0.10.4",
     "react-alice-carousel": "^1.17.1",
     "react-burger-menu": "^2.6.13",
     "react-component-countdown-timer": "^0.1.1",
@@ -96,6 +97,7 @@
     "react-native": "^0.62.2",
     "react-native-elements": "^1.2.7",
     "react-native-vector-icons": "^6.6.0",
+    "react-notification-timeline": "0.0.8",
     "react-number-format": "^4.4.1",
     "react-numeric-input": "^2.2.3",
     "react-player": "^1.15.2",
@@ -115,6 +117,7 @@
     "react-swipeable-views-utils": "^0.13.3",
     "react-time-picker": "^4.0.1",
     "react-timer-machine": "^1.0.2",
+    "react-toastify": "^6.0.9",
     "react-unity-webgl": "^7.1.9",
     "react-video-thumbnail": "^0.1.3",
     "react-viewer": "^3.1.0",
