--- a/SELI-Platform/package.json
+++ b/SELI-Platform/package.json
@@ -77,6 +77,8 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-duration": "^1.0.8",
+    "react-duration-picker": "^1.1.1",
     "react-files": "^2.4.8",
     "react-flow-chart-updated": "^1.2.0",
     "react-froala-wysiwyg": "^3.0.6",
