--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
 
       - uses: technote-space/auto-card-labeler@v1 
         #GitHub actions that automatically labels Issues or PullRequests based on project card moves
-        if: github.event_name == 'push'
+        if: github.event_name == 'project_card' && github.event.action == 'moved' 
         with:
           GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACTION_TOKEN }}
             # Config file name.
